--- a/astro-try-out/src/layouts/Layout.astro
+++ b/astro-try-out/src/layouts/Layout.astro
@@ -15,6 +15,9 @@ const { title } = Astro.props as Props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
+	<header>
+		This is a header from the layout.
+	</header>
 	<body>
 		<slot />
 	</body>
