Astro: Add TailwindCSS

--- a/astro-try-out/src/pages/404.astro
+++ b/astro-try-out/src/pages/404.astro
@@ -3,6 +3,6 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="404 Content Not Found">
-    <h1>404</h1>
+    <h1 class="text-6xl">404</h1>
     <p>Nothing seems to exist at the current url address.</p>
 </Layout>
