--- a/astro-try-out/src/pages/404.astro
+++ b/astro-try-out/src/pages/404.astro
@@ -1,8 +1,11 @@
 ---
+import DefaultMain from "../components/DefaultMain.astro";
 import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout title="404 Content Not Found">
-    <h1 class="text-6xl">404</h1>
-    <p>Nothing seems to exist at the current url address.</p>
+    <DefaultMain>
+        <h1 class="text-6xl">404</h1>
+        <p>Nothing seems to exist at the current url address.</p>
+    </DefaultMain>
 </Layout>
