--- a/astro-try-out/src/pages/index.astro
+++ b/astro-try-out/src/pages/index.astro
@@ -1,10 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+import DefaultMain from '../components/DefaultMain.astro';
 ---
 
 <Layout title="Welcome to Astro.">
-	<main>
+	<DefaultMain>
 		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
 		<p class="instructions">
 			I've changed the code and thus completed the below challenge!<br />
@@ -32,7 +33,7 @@ import Card from '../components/Card.astro';
 				body="Come say hi to our amazing Discord community. ❤️"
 			/>
 		</ul>
-	</main>
+	</DefaultMain>
 </Layout>
 
 <style>
