--- a/astro-try-out/src/layouts/Layout.astro
+++ b/astro-try-out/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import DefaultFooter from "../components/DefaultFooter.astro";
-import DefaultHeader from "../components/DefaultHeader.astro";
+import DefaultHeader from "../components/DefaultHeader.vue";
 import DefaultMain from "../components/DefaultMain.astro";
 export interface Props {
 	title: string;
@@ -21,7 +21,7 @@ const { title } = Astro.props as Props;
 	
 	<body>
 		<slot name="header">
-			<DefaultHeader currentPage={title} />
+			<DefaultHeader currentPage={title} client:load />
 		</slot>
 		<slot>
 			<DefaultMain />
